2004-11-12  Todd Berman  <tberman@off.net>

	* configure.in: Require 0.6.99 (HEAD SVN) gtksourceview-sharp.

2004-11-11  Todd Berman  <tberman@off.net>

	* configure.in: Check for OEE Mono.Posix

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* *: Large changeset, adds project management, compilation, and
	rudimentary code completion support for vb.net

2004-10-27  Todd Berman  <tberman@off.net>

	* configure.in: Make sure a valid gnome prefix is returned, error out
	otherwise.

2004-10-27  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* monodevelop.xml: fix vb mime entry.

2004-10-21  John Luke  <john.luke@gmail.com>

	* *Makefile.am: remove CSC= in individual Makefile.am's (make CSC='mcs -g' for debug)
	add $(DLL).mdb to CLEANFILES

2004-10-17  John Luke  <john.luke@gmail.com>

	* configure.in: echo $CSC at the end for the prefix impaired (like me)

2004-10-15  Fawad Halim <fawad@fawad.net>

	* build/AddIns/AddIns/BackendBindings/templates/Makefile.am: Add missing NemerleGtkSharpWindow.xft.xml reference.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorDisplayBinding.cs:
	* src/AddIns/BackendBindings/CSharpBinding/CSharpBindingCompilerManager.cs:
	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml:
	* build/AddIns/AddIns/BackendBindings/templates/AppConfigFile.xft.xml: Added support for app.config at compile time for C#, and added template for same under File->New->Misc.
	

2004-10-04  Todd Berman  <tberman@off.net>

	* configure.in: Add a --with-gtk-sharp-2-0 to allow gtk-sharp-2-0
	to be used. This is a needed workaround for now to allow for people
	to get 2.0 completion info. Works around a mono bug. That jackson
	is going to fix. :)

2004-09-20  Tim Gerla  <tim@gerla.net>

	* configure.in:
	* Makefile.am: add --disable-update-mimedb to disable calling
		       update-mime-database on install. 

2004-09-19  Enver ALTIN  <ealtin@parkyeri.com>

	* configure.in: Added Turkish to ALL_LINGUAS.
